// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[COMPONENTS]: LeftIcon component > to match snapshot 1`] = `
<body>
  <div>
    <span
      data-icon="eva:arrow-ios-forward-fill"
      data-sx="{"transform":" scaleX(-1)"}"
      data-testid="iconify"
    />
  </div>
</body>
`;

exports[`RightIcon component > to match snapshot 1`] = `
<body>
  <div>
    <span
      data-icon="eva:arrow-ios-forward-fill"
      data-sx="{}"
      data-testid="iconify"
    />
  </div>
</body>
`;
